
- Fixed ancient bug on client shutdown event handling, which was
  invoking the xrun notification handler by mistake.

- Support for maximum scheduling delay status added (EXPERIMENTAL);
  this relies on jack_get_max_delayed_usecs() function availability at
  configure time, depending on a Lee Revell's non-official JACK patch.

- Patchbay Activate button is now a toggle button widget.

- Preset selection has been added to the context menu.


0.2.12a  2004-10-11  Audio connections now naturally sorted.

- Client port list on audio connections are now hopefully fixed for good;
  the sort comparison function now takes full natural order into account.


0.2.12   2004-10-08  Larger icons and font option on connections/patchbay.

- Fixed some old and slow memory-leak due to redundand and repetitive call
  to jack_port_by_name() (discovered and solved, thanks to Jesse Chappell);
  some other free() and configure fixes were also applied.

- Shiny display effect toggling has immediate feedback on setup dialog.

- Added new usx2y driver support (EXPERIMENTAL).

- New scaled connections/patchbay icons were added; meanwhile, all inline
  XPM icons were removed and brainlessly converted to PNG format.

- New setup options as for the connections/patchbay view apprearence: larger
  icon sizes and font selection are now possible, to better ease manipulation
  on a touchscreen (feature requested for Lionstracs' Mediastation).

- Connection line width follows icon size in discrete proportion.

- "Other" setup options moved to a new dialog tab, "Misc"; new extreme item
  values, 32 and 16 frames, added to the drop-down list of the Frames/Buffer
  setting (as suggested by Mark Knetch).


0.2.11   2004-09-10  Shiny display now optional and other fixes.

- Fixed Input/Output channels settings, being now either enabled when
  the ALSA driver is selected for Capture/Playback only.
  
- Shiny display effect: after some conservative user complaints this 